# picture-clip

./: .gitignore  README.md  build.sh  main.py  pyproject.toml  uninstall-linux.sh  uninstall-windows.bat  uninstall.sh
assets/: PictureClipboard.icns
src/picture_clipboard/: __init__.py  app.py  clipboard_monitor.py  hotkey.py  models.py  store.py  ui.py
