[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picture-clipboard"
version = "0.1.0"
description = "Cross-platform clipboard image history manager"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
  "pynput>=1.7.7",
]

[project.scripts]
picture-clipboard = "picture_clipboard.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
